# QTCube

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Sep_cube  Sep_cube.in  main.cpp  qt_cube.pro
base/: CMakeLists.txt  base.pro  buffer.cpp  buffers_data.cpp  buffers_data.h  byte_buffer_buffer.cpp  byte_buffer_buffer.h  dataset.cpp  dataset.h  dynamic.cpp  dynamic.h  fastmarch.cpp  fileIO.cpp  fileIO.h  float_1d.cpp  float_1d.h  float_2d.cpp  float_2d.h  float_buffer_buffer.cpp  float_buffer_buffer.h  hypercube.cpp  hypercube_float.cpp  hypercube_float.h  incore_data.cpp  incore_data.h  l2_norm.cpp  l2_norm.h  lloyd.h  lloyd_1d.cpp  my_score.h  my_vector.h  norm.h  norm_vector.h  orient_cube.cpp  orient_cube.h  orient_map.cpp  orient_map.h  part_semb_data.cpp  part_semb_data.h  percentile.cpp  (+10 more)
dockers/: Docker.CentOS-noSEP  Dockerfile.CentOSSEP  Dockerfile.debian  Dockerfile.debianDev  Dockerfile.fromCentOS  log
gui/: CMakeLists.txt  Qbuffers_data.h  Qcreated_data.h  Qdataset.cpp  Qdataset.h  Qincore_data.h  Qio_func.h  Qoutcore_data.h  Qpartial_data.h  Qsurface_data.cpp  Qsurface_data.h  anno.cpp  anno.h  ano_panel.cpp  ano_panel.h  auto_brown.cpp  auto_viteribi.cpp  auto_viteribi.h  autopick.cpp  autopick.h  autopick_2d.cpp  autopick_2d.h  buffer.cpp  buffer.h  byte_buffer.cpp  byte_buffer.h  centerwindow.cpp  centerwindow.h  chev_strat_data.cpp  chev_strat_data.h  clip_bar.cpp  clip_bar.h  color_panel.cpp  color_panel.h  contour.cpp  contour.h  created_data.cpp  created_data.h  cube.cpp  cube.h  (+142 more)
