cmake_minimum_required(VERSION 3.8)
project(qtcube-gui)
set(CMAKE_AUTOMOC TRUE)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../base)

#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../base)
include_directories(${TBB_INCLUDE_DIRS})
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
set(CMAKE_MACOSX_RPATH 1)
endif()

set(INCLUDES
    anno.h
    maps.h
    ano_panel.h
    mode.h
    mouse_anno.h
    pick_panel.h
    pick_draw.h
    mouse_func.h
    pick_plane_new.h
    autopick.h
    mouse_orient.h
    mouse_overlay.h
    qcube_panel.h
    mouse_pick.h
    qcubetabbasics.h
    mouse_region.h
    qcubewidgetbasics.h
    mouse_zoom.h
    raster.h
    centerwindow.h
    moved_out.h
    move_semblance.h
    clip_bar.h
    multiface.h
    color_panel.h
    multiple.h
    contour.h
    simple_color.h
    my_fonts.h
    single.h
    cube_cut.h
    navigate_panel.h
    slice.h
    cube.h
    nmoed.h
    slice_types.h
    data_panel.h
    nmo_semblance.h
    Qdataset.h
    Qincore_data.h
    Qoutcore_data.h
    Qcreated_data.h
    datasets.h
    threeface.h
    my_colors.h
    display_panel.h
    three_view.h
    draw_other.h
    orient_panel.h
    drawwindow.h
    #Qsurface_data.h
    #Qbuffers_data.h
    view.h
    panel.h
   # surface_data.h
    view_panel.h
    panel_panel.h
    view_types.h
    help_panel.h
    panels.h
    widget_tools.h
    history.h
    wiggle.h
    Qpartial_data.h
    window_panel.h
    interval_pick.h
    path.h
    windows.h)
set(SOURCES
    anno.cpp
    mode.cpp
   # surface_data.cpp
    ano_panel.cpp
    mouse_anno.cpp
    pick_panel.cpp
    pick_draw.cpp
    mouse_func.cpp
    pick_plane_new.cpp
    mouse_orient.cpp
    autopick.cpp
    mouse_overlay.cpp
    qcube_panel.cpp
    mouse_pick.cpp
    qcubetabbasics.cpp
    mouse_region.cpp
    qcubewidgetbasics.cpp
    mouse_zoom.cpp
    raster.cpp
    centerwindow.cpp
    moved_out.cpp
    move_semblance.cpp
    clip_bar.cpp
    multiface.cpp
    color_panel.cpp
    multiple.cpp
    contour.cpp
    simple_color.cpp
    my_fonts.cpp
    my_colors.cpp
    single.cpp
    cube.cpp
    navigate_panel.cpp
    slice.cpp
    cube_cut.cpp
    nmoed.cpp
    slice_types.cpp
    data_panel.cpp
    nmo_semblance.cpp
    Qdataset.cpp
    datasets.cpp
    threeface.cpp
    display_panel.cpp
    three_view.cpp
    draw_other.cpp
    orient_panel.cpp
    drawwindow.cpp
    view.cpp
    panel.cpp
    view_panel.cpp
    panel_panel.cpp
    view_types.cpp
    help_panel.cpp
    panels.cpp
    widget_tools.cpp
    history.cpp
    wiggle.cpp
    window_panel.cpp
    interval_pick.cpp
    path.cpp
    windows.cpp
    maps.cpp)
# INCLUDE(${QT_USE_FILE})
add_library(gui ${SOURCES} ${INCLUDES})
target_link_libraries(gui displaySlice
                      ${LIBTBB})

target_link_libraries(gui Qt5::Widgets  Qt5::PrintSupport)
install(TARGETS gui DESTINATION lib)
